# Penny

./: .gitignore  README.md  checkpoints.dvc  data.dvc  pyproject.toml
.dvc/: config
configs/csdi/: lob.json  ofi.json
configs/painting/: lob.json  ofi.json
configs/timesfm/: lob.json  ofi.json
docs/models/: README.md  alphastablelob.md  arima.md  jumpgatelob.md  linvar.md  logreg.md  ofsatnet.md  var.md
docs/xai/: README.md  agreement.md  attention-readouts.md  attribution.md  cka.md  faithfulness.md  gate-sweep.md  probes.md  run-all.md
notebooks/: alpha_horizon.ipynb  backtest.ipynb  increment_diagnostics.ipynb  lob_analysis.ipynb  model_comparison.ipynb
notebooks/stocks/: model_comparison.ipynb  portfolio_backtest.ipynb
scripts/: compare_xai.py  explain_gradient.py  find_alpha.py  plot_xai.py  portfolio_backtest.py  resample_binance.py  resample_nobitex.py
slurm/: csdi_lob.slurm  csdi_ofi.slurm  deeplob_lob.slurm  deeplob_ofi.slurm  jointdiff_lob.slurm  jointdiff_ofi.slurm  lobtransformer_lob.slurm  lobtransformer_ofi.slurm  painting_lob.slurm  painting_ofi.slurm  timesfm_lob.slurm  timesfm_ofi.slurm  train_lob.slurm  train_ofi.slurm
slurm/binance/: deeplob_lob.slurm  deeplob_ofi.slurm  jointdiff_lob.slurm  jointdiff_ofi.slurm  lobtransformer_lob.slurm  lobtransformer_ofi.slurm
slurm/nobitex/: deeplob_lob.slurm  deeplob_ofi.slurm  jointdiff_lob.slurm  jointdiff_ofi.slurm  lobtransformer_lob.slurm  lobtransformer_ofi.slurm
slurm/xai/: compare_xai.slurm  explain_gradient.slurm
src/crypto/: classical.py  dataset.py  labels.py  loader.py  train_2phase_diffusion.py  train_alphastablelob.py  train_arima.py  train_axiallob.py  train_binctabl.py  train_ctabl.py  train_deeplob.py  train_diffclf.py  train_dla.py  train_jointdiff.py  train_jointdiff_drift.py  train_jointdiff_levy.py  train_jointdiff_tedm.py  train_jointdiffcfg.py  train_jointdiffdf.py  train_jointdiffdf_drift.py  train_jointdit.py  train_jointdit_cm.py  train_jointdit_drift.py  train_jointdit_levy.py  train_jointdit_tedm.py  train_jumpgate_score.py  train_jumpgate_unet.py  train_jumpgatelob.py  train_linvar.py  train_lobtransformer.py  train_logreg.py  train_multi_tlob.py  train_ofsatnet.py  train_scorejacoblob.py  train_tlob.py  train_var.py
src/csdi/: __init__.py  dataset.py  evaluate.py  features.py  infer.py  labels.py  model.py  train.py
src/levy/: __init__.py  config.py
src/models/: alphastable.py  alphastablelob.py  axiallob.py  binctabl.py  consistency.py  ctabl.py  deeplob.py  diffclf.py  dla.py  jointdiff.py  jointdiffcfg.py  jointdiffdf.py  jointdifflevy.py  jointdit.py  jumpgatelob.py  jumpgatescore.py  jumpgateunet.py  linvar.py  lobtransformer.py  logreg.py  modules.py  ofsatnet.py  probe.py  scorejacoblob.py  tlob.py
src/painting/: __init__.py  dataset.py  diffusion.py  evaluate.py  features.py  infer.py  labels.py  model.py  train.py
src/timesfm/: __init__.py  dataset.py  evaluate.py  features.py  infer.py  labels.py  model.py  train.py
src/utils/: flops.py  pcgrad.py  training.py
(+1764 files in other folders)
