[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penny"
version = "0.1.0"
description = "Regime-conditioned diffusion model for crypto limit order book generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.32.0",
    "dvc[s3]>=3.56.0",
    "loguru>=0.7.3",
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
# Explicit CUDA-version extras for Linux GPU installs.
cu126 = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]
cu128 = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]
cu129 = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]
# Optional CPU-only extra for local development or non-GPU nodes.
cpu = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]
# Apple Silicon / macOS — standard PyPI wheel includes MPS.
# Set "device": "mps" in your config, or leave "cuda" (auto-falls back to MPS).
mps = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/penny"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu129", extra = "cu129", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu132", extra = "cu132", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu129", extra = "cu129", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu132", extra = "cu132", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu1322"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
conflicts = [
    [
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "cu129" },
        { extra = "cu132" },
        { extra = "cpu" },
        { extra = "mps" },
    ],
]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
